--- a/practice6.html
+++ b/practice6.html
@@ -67,7 +67,7 @@
           <span class="span3"
             ><img src="images/img1.png" alt="image" width="40px" height="40px"
           /></span>
-          ipsa tempora nobis. Neque mollitia quia porro debitis doloribus?
+          ipsa tempora nobis. Neque mmollitia quia porro debitis doloribus?
           <span class="span4"><button>Click Me</button></span>
         </p>
       </div>
